# jalmi

./: Cargo.toml  README.md
src/: api.rs  config.rs  gui.rs  main.rs  models.rs
src/modules/: mod.rs
src/modules/config/: config.rs
src/modules/llm/: llm.rs
src/modules/ui/: mod.rs  theme.rs
src/modules/ui/widgets/: bubble.rs  drop_down.rs  mod.rs  status.rs  text_box.rs  toggle_button.rs
