[package]
name = "jalmi"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3.0"
iced = "0.13.1"
iced_aw = "0.12.2"
iced_futures = "0.13.2"
listeners = "0.2.1"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
ureq = { version = "3.0.10", features = ["json"] }
